Fix datepicker not showing (fix #522 too)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -169,10 +169,6 @@ main nav > :last-child {
     }
 }
 
-#content .form-group {
-    overflow: hidden;
-}
-
 #content ul li {
     list-style: none;
 }
